<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ipqc_main_title_tv"
        android:background="@color/F1F5F7">
        <!--android:paddingLeft="@dimen/dp_20"-->
        <!--android:paddingRight="@dimen/dp_20">-->

        <RadioGroup
            android:id="@+id/ipqc_main_categorg_gv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/ipqc_main_category_chujianbiao"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_ipqc_category"
                android:button="@null"
                android:gravity="center"
                android:text="@string/chujianbiao"
                android:textColor="@drawable/rb_tv" />

            <RadioButton
                android:id="@+id/ipqc_main_category_xunjianbiao"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_ipqc_category"
                android:textColor="@drawable/rb_tv"
                android:button="@null"
                android:gravity="center"
                android:text="@string/xunjianbiao"
                 />
        </RadioGroup>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ipqc_main_zhicheng_rv"
            android:layout_width="@dimen/dp_70"
            android:layout_height="wrap_content"
            android:layout_below="@id/ipqc_main_categorg_gv"/>
        <View
            android:layout_width="@dimen/px_1"
            android:layout_height="match_parent"
            android:background="@color/_8A000000"
            android:layout_below="@id/ipqc_main_categorg_gv"
            android:layout_toRightOf="@id/ipqc_main_zhicheng_rv"/>


        <Button
            android:id="@+id/ipqc_main_recordlist_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/ipqc_main_zhicheng_rv"
            android:background="@drawable/bg_click_commit"
            android:text="@string/jianchajilu"
            android:textColor="@drawable/bg_rg_ipqc_tv" />

        <ListView
            android:id="@+id/ipqc_main_tablelist_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/ipqc_main_recordlist_btn"
            android:layout_below="@id/ipqc_main_categorg_gv"
            android:layout_marginLeft="@dimen/dp_1"
            android:layout_toRightOf="@id/ipqc_main_zhicheng_rv"
            android:background="@color/FFFFFF"
            android:divider="@drawable/divider"
            android:dividerHeight="@dimen/px_1"
            android:padding="@dimen/dp_10"
            />
    </RelativeLayout>
</RelativeLayout>