<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/login_rl_head"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_205"
            android:paddingTop="@dimen/dp_25"
            android:background="@mipmap/login_image">

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/login_ll"
            android:layout_width="@dimen/dp_210"
            android:layout_height="@dimen/dp_45"
            android:layout_below="@id/login_rl_head"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_26"
            android:layout_marginRight="@dimen/dp_30"
            android:background="@drawable/backgroud_style"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="2dp">

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_7"
                android:src="@mipmap/login_icon_user" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_2"
                android:text="@string/pnum"
                android:textColor="@color/de000000"
                android:textSize="@dimen/sp_14" />

            <EditText
                android:id="@+id/edt_login_pnum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@null"
                android:hint="@string/edt_pnum"
                android:textColorHint="@color/_8A000000"
                android:textColor="@color/de000000"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/sp_14"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_ll_pwd"
            android:layout_width="@dimen/dp_210"
            android:layout_height="@dimen/dp_40"
            android:layout_below="@id/login_ll"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_18"
            android:layout_marginRight="@dimen/dp_30"
            android:background="@drawable/backgroud_style"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="2dp">

            <ImageView
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_8"
                android:layout_marginRight="@dimen/dp_7"
                android:src="@mipmap/login_icon_password" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_2"
                android:text="@string/pw"
                android:textColor="@color/de000000"
                android:textSize="@dimen/sp_14" />

            <EditText
                android:id="@+id/edt_login_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_10"
                android:background="@null"
                android:hint="@string/edt_pnum"
                android:textColorHint="@color/_8A000000"
                android:inputType="textPassword"
                android:textColor="@color/de000000"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/sp_14" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/login_ll_pwd">


            <Button
                android:id="@+id/btn_login_commit"
                android:layout_width="@dimen/dp_210"
                android:layout_height="@dimen/dp_45"
                android:layout_centerInParent="true"
                android:background="@drawable/btn_commit_bg"
                android:stateListAnimator="@null"
                android:text="@string/login"
                android:textColor="@color/FFFFFF"
                android:textSize="@dimen/sp_17" />
        </RelativeLayout>

    </RelativeLayout>
</layout>